# ed

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ed/: __init__.py  db.py  exceptions.py
tests/: test_ed.py
tests/testdb/: test.xlsx
